:lipstick: Fix spacing issues

--- a/src/components/layout/styles.styl
+++ b/src/components/layout/styles.styl
@@ -1,8 +1,8 @@
 @import '../../style/media.styl'
 @import '../../style/utils.styl'
 
-$paddingTop = pxToRem(20)
-$paddingLeft = pxToRem(20)
+$paddingTop = pxToRem(11)
+$paddingLeft = pxToRem(17)
 
 $paddingTopM = pxToRem(7)
 $paddingLeftM = pxToRem(6)
@@ -17,8 +17,8 @@ $paddingLeftM = pxToRem(6)
     padding: $paddingTopM $paddingLeftM pxToRem(100)
     position: relative
 
-.layoutProjectOpen
-  cursor: url(/assets/x.svg), auto
+//.layoutProjectOpen
+  //cursor: url(/assets/x.svg), auto
 
 .top
   display: flex
