--- a/src/components/main/styles.styl
+++ b/src/components/main/styles.styl
@@ -5,7 +5,7 @@
   cursor: default
   position: fixed
   bottom: pxToRem(50)
-  left: pxToRem(20)
+  left: pxToRem(17)
   text-align: left
   a
     text-decoration: underline
