--- a/src/components/project-list/styles.styl
+++ b/src/components/project-list/styles.styl
@@ -16,12 +16,11 @@
   position: absolute
   top: 0
   right: 0
-  padding: pxToRem(20) pxToRem(20)
+  padding: pxToRem(11) pxToRem(17)
   width: 100vw
   height: 100vh
   overflow: auto
   list-style-type: none
-  padding-bottom: pxToRem(20)
   transition: color 0.3s ease
   +mobile()
     padding: pxToRem(63) pxToRem(6) pxToRem(10)
